@@ -19,8 +19,8 @@
 <!-- For the regular version, the versionCode must have an odd tens digit. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="org.tlhInganHol.android.klingonassistant"
-        android:versionCode="101"
-        android:versionName="2012.12.14c"
+        android:versionCode="104"
+        android:versionName="2012.12.22a"
         android:installLocation="auto">
 
     <!-- Minimum Android version 2.1 (7), targeted version 4.0.3 (15). -->
@@ -28,7 +28,7 @@
               android:targetSdkVersion="15"/>
 
     <application android:label="@string/app_name"
-                 android:icon="@drawable/ic_dictionary"
+                 android:icon="@drawable/ic_ka"
                  android:theme="@style/Theme.Sherlock">
 
         <!-- The default activity of the app; displays search results. -->
