@@ -2888,7 +2888,7 @@ When used with {-lu':v}, this prefix means "Someone (indefinite subject) does so
       <column name="synonyms"></column>
       <column name="antonyms"></column>
       <column name="see_also">{De'vID:n:name}</column>
-      <column name="notes">{tlhIngan Hol boQwI':n:nolink} "Klingon Language Assistant" - database version 2012.12.19a.
+      <column name="notes">{tlhIngan Hol boQwI':n:nolink} "Klingon Language Assistant" - database version 2012.12.22a.
 
 To begin searching, simply type into the search box.  On some devices, you may have to press the "Search" (magnifying glass) key or the "Menu" key to activate the search box.
 
