@@ -1,5 +1,11 @@
 CHANGELOG
 
+2012-12-22: New icons.  Fixed a few typos.
+
+2012-12-19: Birds and Haynes manual.
+
+2012-12-14: Enabled non-Klingon UI language.
+
 2012-12-12: German entries up to end of {l}.  Major UI changes for older devices using ActionBarSherlock.
 
 2012-12-01: German entries up to end of {j}.
